--- a/src/Template/cup/catalog/order/form.twig
+++ b/src/Template/cup/catalog/order/form.twig
@@ -16,7 +16,7 @@
                     </a>
                 </div>
                 <div class="ml-2 py-2 py-md-0">
-                    <a href="/cup/catalog/order/{{ order.uuid }}/shipping" class="btn btn-secondary">
+                    <a href="/cup/catalog/order/{{ order.uuid }}/dispatch" class="btn btn-secondary">
                         <i class="fas fa-dolly"></i>
                         {{ 'Shipping'|locale }}
                     </a>
