--- a/src/Template/cup/catalog/order/index.twig
+++ b/src/Template/cup/catalog/order/index.twig
@@ -119,7 +119,7 @@
                                                 <a href="/cup/catalog/order/{{ item.uuid }}/invoice" class="btn btn-sm btn-outline-info">
                                                     <i class="fas fa-file-invoice"></i>
                                                 </a>
-                                                <a href="/cup/catalog/order/{{ item.uuid }}/shipping" class="btn btn-sm btn-outline-info">
+                                                <a href="/cup/catalog/order/{{ item.uuid }}/dispatch" class="btn btn-sm btn-outline-info">
                                                     <i class="fas fa-dolly"></i>
                                                 </a>
                                                 <a href="/cup/catalog/order/{{ item.uuid }}/edit" class="btn btn-sm btn-info">
