--- a/src/Template/cup/catalog/order/invoice.twig
+++ b/src/Template/cup/catalog/order/invoice.twig
@@ -21,7 +21,7 @@
 {% endblock %}
 
 {% block content %}
-    <div id="invoice" class="card card-invoice">
+    <div id="invoice" class="card">
         {{ include(template_from_string(template)) }}
     </div>
 {% endblock %}
