--- a/src/Template/cup/parameters/index.twig
+++ b/src/Template/cup/parameters/index.twig
@@ -1182,6 +1182,7 @@
                                                     'args': {
                                                         'value': '5000',
                                                         'list': 'dimensional_weight',
+                                                        'autocomplete': 'off',
                                                     }
                                                 } %}
 
