rename modal files

--- a/src/Template/cup/catalog/order/form.twig
+++ b/src/Template/cup/catalog/order/form.twig
@@ -254,189 +254,10 @@
                 </div>
             </div>
         </div>
-
-        <div data-order-modal-user class="modal">
-            <div class="row">
-                <div class="col-12">
-                    {% include 'cup/form.twig' with {
-                        'label': 'User'|locale,
-                        'type': 'text',
-                        'postfix_btn': '<a href="/cup/user/add" target="_blank" class="btn btn-outline-secondary btn-icon h-100"><i class="fas fa-user-plus" style="padding-top: 2px;"></i></a>',
-                        'args': {
-                            'value': order.user ? order.user.getName() : '',
-                            'list': 'users',
-                            'autocomplete': 'off',
-                        }
-                    } %}
-
-                    <datalist id="users">
-                        {% if order.user %}
-                            <option data-json="{{ order.user }}" value="{{ order.user.getName() }}">{{ [order.user.phone, order.user.email]|join(' ')|trim }}</option>
-                        {% endif %}
-                    </datalist>
-                </div>
-
-                <div class="col-12">
-                    <div class="text-right">
-                        <button type="button" class="btn btn-outline-info">{{ 'Select user'|locale }}</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div data-order-modal-user-address class="modal">
-            <div class="row">
-                <div class="col-md-6">
-                    {% include 'cup/form.twig' with {
-                        'label': 'Firstname'|locale,
-                        'type': 'text',
-                        'name': 'user[firstname]',
-                        'args': {
-                            'value': order.user ? order.user.firstname : '',
-                        }
-                    } %}
-                </div>
-
-                <div class="col-md-6">
-                    {% include 'cup/form.twig' with {
-                        'label': 'Lastname'|locale,
-                        'type': 'text',
-                        'name': 'user[lastname]',
-                        'args': {
-                            'value': order.user ? order.user.lastname : '',
-                        }
-                    } %}
-                </div>
-
-                <div class="col-md-6">
-                    {% include 'cup/form.twig' with {
-                        'label': 'Country'|locale,
-                        'type': 'text',
-                        'name': 'user[country]',
-                        'args': {
-                            'value': order.user ? order.user.country : '',
-                        }
-                    } %}
-                </div>
-
-                <div class="col-md-6">
-                    {% include 'cup/form.twig' with {
-                        'label': 'City'|locale,
-                        'type': 'text',
-                        'name': 'user[city]',
-                        'args': {
-                            'value': order.user ? order.user.city : '',
-                        }
-                    } %}
-                </div>
-
-                <div class="col-md-12">
-                    {% include 'cup/form.twig' with {
-                        'label': 'Postcode'|locale,
-                        'type': 'text',
-                        'name': 'user[postcode]',
-                        'args': {
-                            'value': order.user ? order.user.postcode : '',
-                        }
-                    } %}
-                    {% include 'cup/form.twig' with {
-                        'label': 'Address'|locale,
-                        'type': 'textarea',
-                        'name': 'user[address]',
-                        'args': {
-                            'value': order.user ? order.user.address : '',
-                            'style': 'min-height: 80px;'
-                        }
-                    } %}
-                </div>
-
-                <div class="col-6">
-                    {% include 'cup/form.twig' with {
-                        'label': 'Company'|locale,
-                        'type': 'text',
-                        'name': 'user[company][title]',
-                        'args': {
-                            'value': order.user ? order.user.company.title : '',
-                        }
-                    } %}
-                </div>
-
-                <div class="col-6">
-                    {% include 'cup/form.twig' with {
-                        'label': 'Group'|locale,
-                        'type': 'select',
-                        'name': 'user[group_uuid]',
-                        'args': {
-                            'option': _({(NIL): 'WITHOUT_GROUP'}|merge(groups.pluck('title', 'uuid').all())),
-                            'selected': order.user ? order.user.group_uuid ?? parameter('user_group')
-                        }
-                    } %}
-                </div>
-
-                <div class="col-12">
-                    {% include 'cup/form.twig' with {
-                        'label': 'Address format'|locale,
-                        'type': 'select',
-                        'args': {
-                            'data': {'address-format': ''},
-                            'option': reference('address_format').pluck('title', 'value.format'),
-                        }
-                    } %}
-                </div>
-
-                <div class="col-12">
-                    <div class="text-right">
-                        <button type="button" class="btn btn-outline-info">{{ 'Save'|locale }}</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div data-order-modal-product class="modal">
-            <div class="row">
-                <div class="col-12">
-                    {% include 'cup/form.twig' with {
-                        'label': 'Item'|locale,
-                        'type': 'text',
-                        'args': {
-                            'list': 'products',
-                            'autocomplete': 'off',
-                        }
-                    } %}
-
-                    <datalist id="products"></datalist>
-                </div>
-
-                <div class="col-6">
-                    {% include 'cup/form.twig' with {
-                        'label': 'Price type'|locale,
-                        'type': 'select',
-                        'args': {
-                            'required': true,
-                            'option': _(constant('/App/Domain/References/Catalog::PRODUCT_PRICE_TYPE')),
-                        }
-                    } %}
-                </div>
-
-                <div class="col-6">
-                    {% include 'cup/form.twig' with {
-                        'label': 'Count'|locale,
-                        'type': 'number',
-                        'args': {
-                            'value': '1',
-                            'placeholder': '1',
-                            'step': 'any',
-                            'min': '1',
-                        }
-                    } %}
-                </div>
-
-                <div class="col-12">
-                    <div class="text-right" style="margin-top: 37px;">
-                        <button type="button" class="btn btn-outline-info">{{ 'Add product'|locale }}</button>
-                    </div>
-                </div>
-            </div>
-        </div>
     </form>
+
+    {% include 'cup/catalog/order/form-modal-user.twig' %}
+    {% include 'cup/catalog/order/form-modal-user-address.twig' %}
+    {% include 'cup/catalog/order/form-modal-product.twig' %}
+
 {% endblock %}
