fix selected default value

--- a/src/Template/cup/parameters/index.twig
+++ b/src/Template/cup/parameters/index.twig
@@ -200,7 +200,8 @@
                                                     'type': 'select',
                                                     'name': 'common[auto_generate_address]',
                                                     'args': {
-                                                        'option': _(['yes', 'no'])
+                                                        'option': _(['yes', 'no']),
+                                                        'selected': 'no'
                                                     }
                                                 } %}
                                             </div>
