fix set parent and category for catalog and publications

--- a/src/Template/cup/catalog/category/form.twig
+++ b/src/Template/cup/catalog/category/form.twig
@@ -72,8 +72,8 @@
                                             'type': 'select',
                                             'name': 'parent',
                                             'args': {
-                                                'option': {(NIL): '---'}|merge(categories.whereNotIn('uuid', [category.uuid]).pluck('title', 'uuid').all()),
-                                                'selected': category.parent ?? parent
+                                                'option': {'': '---'}|merge(categories.whereNotIn('uuid', [category.uuid]).pluck('title', 'uuid').all()),
+                                                'selected': category.parent_uuid ?? parent
                                             }
                                         } %}
                                     </div>
