--- a/src/Template/cup/catalog/category/index.twig
+++ b/src/Template/cup/catalog/category/index.twig
@@ -37,38 +37,7 @@
                         {% endblock %}
 
                         {% block tbody %}
-                            {% for item in categories %}
-                                <div class="row">
-                                    <div class="col-6 col-sm">
-                                        {{ item.title|u.truncate(50, '...') }}
-
-                                        <div class="text-black-50 float-right d-none d-lg-inline">
-                                            {% if item.hidden %}
-                                                <i class="fas fa-eye-slash" data-toggle="tooltip" data-placement="right" title="{{ 'Hidden category'|locale }}"></i>
-                                            {% endif %}
-                                        </div>
-                                    </div>
-                                    <div class="col-6 col-sm-3">{{ categories.firstWhere('uuid', item.parent).title ?? '<code>&mdash;</code>'|raw }}</div>
-                                    <div class="col-12 col-sm-5 text-right">
-                                        <form action="/cup/catalog/category/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('{{ 'Are you sure you want to delete a category?'|locale }}');">
-                                            <div class="btn-group">
-                                                <a href="/cup/catalog/product/{{ item.uuid }}" class="btn btn-sm btn-outline-info">
-                                                    <i class="fas fa-fw fa-eye"></i>
-                                                    <span class="d-none d-md-inline-block">{{ 'Nomenclature'|locale }}</span>
-                                                </a>
-                                                <a href="/cup/catalog/category/{{ item.uuid }}/edit" class="btn btn-sm btn-info">
-                                                    <i class="fas fa-fw fa-edit"></i>
-                                                    <span class="d-none d-md-inline-block">{{ 'Change'|locale }}</span>
-                                                </a>
-                                                <button type="submit" class="btn btn-sm btn-danger">
-                                                    <i class="fas fa-fw fa-trash-alt"></i>
-                                                    <span class="d-none d-md-inline-block">{{ 'Delete'|locale }}</span>
-                                                </button>
-                                            </div>
-                                        </form>
-                                    </div>
-                                </div>
-                            {% endfor %}
+                            {% include 'cup/catalog/category/index-item.twig' with {'parent': null, 'parent_uuid': null} %}
                         {% endblock %}
                     {% endembed %}
                 </div>
