--- a/src/Template/cup/catalog/product/form.twig
+++ b/src/Template/cup/catalog/product/form.twig
@@ -83,7 +83,7 @@
                                             'message': '<a href="/cup/catalog/category/add" class="btn btn-xs btn-info float-right" onclick="return confirm(\'' ~ ('Are you sure you want to go to another page?'|locale) ~ '\');"><i class="fa fa-plus"></i> ' ~ ('Create category'|locale) ~ '</a>',
                                             'args': {
                                                 'option': categories.pluck('title', 'uuid').all(),
-                                                'selected': item.category ?? category.uuid
+                                                'selected': item.category_uuid ?? category.uuid
                                             }
                                         } %}
                                     </div>
