--- a/src/Template/cup/parameters/index.twig
+++ b/src/Template/cup/parameters/index.twig
@@ -201,7 +201,7 @@
                                                     'name': 'common[auto_generate_address]',
                                                     'args': {
                                                         'option': _(['yes', 'no']),
-                                                        'selected': 'no'
+                                                        'selected': 'yes'
                                                     }
                                                 } %}
                                             </div>
