--- a/src/Template/cup/catalog/category/index.twig
+++ b/src/Template/cup/catalog/category/index.twig
@@ -4,7 +4,7 @@
     <div class="page-inner py-5">
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             <div>
-                <h2 class="text-white pb-2 fw-bold">{{ 'List of categories'|locale }} {{ category ? 'embedded in'|locale ~ ' ' ~ category.title : '' }} ({{ categories.where('parent', category ? category.uuid : NIL).count() }})</h2>
+                <h2 class="text-white pb-2 fw-bold">{{ 'List of categories'|locale }} {{ category ? 'embedded in'|locale ~ ' ' ~ category.title : '' }} ({{ category ? categories.where('parent_uuid', category.uuid).count() : categories.count() }})</h2>
             </div>
         </div>
     </div>
